[package]
name = "ffix"
description = "Rust FFI utilities"
version = "0.1.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/ffix"
repository = "https://github.com/rossnomann/ffix"
readme = "README.md"

[dependencies]
libc = "0.2"
